k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-app-service
  namespace: secure-app
spec:
  selector:
    app: secure-app

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http

  type: ClusterIP
