k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: secure-app-policy
  namespace: secure-app

spec:
  podSelector:
    matchLabels:
      app: secure-app

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 5000

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
